...
}

class _TabsScreenState extends State<TabsScreen> {
  int _selectedPageIndex = 0;

  final List<Widget> pages = [
    const HomeScreen(key: Key('homePage')),
    const EventListScreen(key: Key('eventListPage')),
    const PledgedGiftsScreen(key: Key('pledgedGiftsPage')),
  ];

  final List<String> titles = [
    'Home',
...
          BottomNavigationBarItem(
            key: Key("HomeTab"),
            icon: Icon(Icons.home_outlined),
            label: 'Home',
          ),
          BottomNavigationBarItem(
            key: Key("EventsTab"),
            icon: Icon(Icons.event_outlined),
            label: 'Events',
          ),
          BottomNavigationBarItem(
            key: Key("PledgedGiftsTab"),
            icon: Icon(Icons.card_giftcard_outlined),
...
